test/files/pos/byname-implicits-32/byname-implicits-30/Main_2.scala
object Test {
  util.lazily[Rec]
}
