test/files/neg/t4079/t4079_2.scala
object Test {
  Cat.compose[List,Option].Functor
}
